--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Thank you for using our template!",
   "main": "index.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/isaackumi/ISP_#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0"
+    "express-enforces-ssl": "^1.1.0",
+    "express-handlebars": "^3.1.0",
+    "helmet": "^3.22.0",
+    "hsts": "^2.2.0"
   }
 }
